# backend-new/internal/pkg/db/model/import_jobs.gen.go
@@ -1,29 +1,0 @@
-// Code generated by gorm.io/gen. DO NOT EDIT.
-// Code generated by gorm.io/gen. DO NOT EDIT.
-// Code generated by gorm.io/gen. DO NOT EDIT.
-
-package model
-
-import (
-	"time"
-)
-
-const TableNameImportJob = "import_jobs"
-
-// ImportJob mapped from table <import_jobs>
-type ImportJob struct {
-	ID              string    `gorm:"column:id;primaryKey" json:"id"`
-	Status          string    `gorm:"column:status;not null;default:'pending'" json:"status"`
-	SourcePath      string    `gorm:"column:source_path;not null" json:"source_path"`
-	TotalPhotos     int32     `gorm:"column:total_photos;not null" json:"total_photos"`
-	ProcessedPhotos int32     `gorm:"column:processed_photos;not null" json:"processed_photos"`
-	FailedPhotos    int32     `gorm:"column:failed_photos;not null" json:"failed_photos"`
-	Log             string    `gorm:"column:log;not null" json:"log"`
-	CreatedAt       time.Time `gorm:"column:created_at;not null;default:CURRENT_TIMESTAMP" json:"created_at"`
-	CompletedAt     time.Time `gorm:"column:completed_at" json:"completed_at"`
-}
-
-// TableName ImportJob's table name
-func (*ImportJob) TableName() string {
-	return TableNameImportJob
-}
